-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 7.0.0
-
9656eb9e7a (qt-creator/qt-creator/7.0) 9656eb9e7a (qt-creator/qt-creator/master) 9656eb9e7a (qt-creator/qt-creator/qds-3.3) 9656eb9e7a (qt-creator/tqtc-qt-creator/7.0)
QTCREATORBUG-25917 fixed numerous issues with strict equality checks, but some cases remain.
let bool1 = true if (bool1 === true) {} // OK let bool2 = Boolean(1>0) if (bool2 === true) {} // Warning M325 let str1 = "true" if (str1 === "true") {} // OK let str2 = String(bool1) if (str2 === "true") {} // Warning M325
- relates to
-
QTCREATORBUG-25917 M325 missing explanation in doc
-
- Closed
-
-
QTCREATORBUG-27582 One more invalid case of M325: Attached properies
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-27380 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
406000,2 | QmlJS: Fix more invalid M325 cases | 7.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |